# Locksmith

./: .gitignore  Locksmith.kdev4  README.md  locksmith_inject.cpp  main.cpp  meson.build  test.cpp
.cache/clangd/index/: arch_x86.c.96FB16A4211E027D.idx  arch_x86.h.8BEB02A687BD4A79.idx  disasm.h.0E0B19C2C26DA3C5.idx  disasm_distorm.c.3D5471E7733E9B6F.idx  funchook.c.B6C867607DA6D15B.idx  funchook.h.E894D37530337F49.idx  funchook_internal.h.10C833AE3258165B.idx  libfunchook_test.c.424A0BF3E4B35E02.idx  libfunchook_test.h.E4FFF6E5F1EB854E.idx  libfunchook_test_cpp.cpp.9EDF34FC125E8742.idx  libfunchook_test_x86_64_gas.S.6DC878875DE53910.idx  locksmith_inject.cpp.5CCA9A2B12B2EB91.idx  main.cpp.699135F2E1DFC109.idx  os_unix.c.985812D1C6CCA3A4.idx  prehook-x86_64-sysv.S.07522E19865626E4.idx  suffix.list.7782AB03E0BB33EE.idx  template.inc.A03B0FE6830801C4.idx  test.h.3F7836D333355AAD.idx  test_cpp.cpp.ED4CE54A96220F41.idx  test_main.c.F08B589537BC7F72.idx  test_prehook.c.B5DB23DCD4D0D0E4.idx  unit_test.c.21C8B753B98249EF.idx  unit_test.h.8C6B89712C68BA72.idx
.kdev4/: Locksmith.kdev4
